--- a/3-dom/index.html
+++ b/3-dom/index.html
@@ -59,6 +59,32 @@
 
   <script>
     // TODO: Add your code here
+    function playSound() {
+      //console.log(event.key, event.keyCode);
+      const key = document.querySelector(`div[data-key="${event.keyCode}"]`);
+      const audio = document.querySelector(`audio[data-key="${event.keyCode}"]`);
+
+      if (!audio){
+        return;
+      }
+
+      key.classList.add("playing");
+      audio.currentTime = 0;
+      audio.play();
+    }
+
+    function removeTransition(event) {
+      if (event.propertyName === "transform"){
+        //console.log(event)
+        event.target.classList.remove("playing")
+      }
+    }
+
+    const keys = Array.from(document.querySelectorAll(".key"));
+
+    keys.forEach((key)=> key.addEventListener("transitionend", removeTransition));
+
+    window.addEventListener("keydown", playSound);
   </script>
 </body>
 
